# EnclaveFuzz

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.sh  build_target.sh
Dockerfile/: EnclaveFuzz.Dockerfile
SGXFuzzerRT/: CMakeLists.txt  RandPool.h  libFuzzerCallback.cpp  libFuzzerCallback.h
SGXSanPass/: AddressSanitizer.cpp  CMakeLists.txt  LLVMStructTypeSerialize.cpp  SGXSanPass.cpp
SGXSanRT/SGXSanRTApp/: CMakeLists.txt  Interceptor.cpp  Malloc.cpp  Malloc.h  MemAccessMgr.cpp  MemAccessMgr.h  Poison.cpp  Poison.h  PoisonCheck.cpp  SGXSanRTApp.cpp  SGXSanRTApp.h  SGXSanRTConfig.h  Sticker.cpp  Sticker.h
SGXSanRT/SGXSanRTEnclave/: CMakeLists.txt  TSticker.cpp
Tool/workdir/: fuzz.sh  merge.sh  setup.sh  show_cov.sh  stop.sh
pyscript/: addr2line.py  gdb.md  patch.md
src/: main.rs
