[package]
name = "EnclaveFuzz"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
libafl = { version = "0.15.4", path = "ThirdParty/LibAFL/crates/libafl", features = ["std", "derive", "tui_monitor"] }
libafl_bolts = { version = "0.15.4", path = "ThirdParty/LibAFL/crates/libafl_bolts" }
